# nedryland

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  component.nix  config.nix  default.nix  dependabot.yml  deployment.nix  docs.nix  extend.nix  flake.nix  mkclient.nix  mkcomponent.nix  mkfunction.nix  mkservice.nix  mktheme.nix  nixpkgs.nix  shell-commands.nix  shell.nix  shells.nix  targetsetup.nix  test.nix  tests.nix  versions.nix
.github/workflows/: build-components.yml  build-examples-shared.yml  build-examples.yaml  build-examples.yml  (+6 more)
ci/: actionlint  check  check.bash  default.nix  nix-fmt.bash  nix-lint.sh  nixfmt  nixlint  shellcheck  shellcheck.bash
configs/: databaseconfig.nix  deploymentconfig.nix  k8sconfig.nix
deployment/: project.nix  terraform.nix
docs/: book.toml
documentation/: default.nix  mdbook-run.bash  mdbook.nix  mkdocs.nix
examples/protobuf/clients/rust/: .envrc  .gitignore  Cargo.toml  client.nix
examples/protobuf/clients/rust/src/: main.rs
languages/: default.nix
nix/: sources.json
overlays/: backported-packages.nix  darwin-fix-mcfgthreads.nix  pocl.nix  python-jedi.nix  python-packages-37.nix  python-packages-common.nix  python-packages.nix  python_packages.nix  remove-define-check.patch  terraform.nix  wasilibc.nix  wasm.nix  wasmer.nix
target-setup/: default.nix  target-setup.bash
test/: components.nix  dependencies.nix  deployment.nix  docs.nix  filter-source.nix  mock-base.nix  nested-components.nix  python-wheel.nix  rust-cross.nix
utils/: build-static-nginx.nix
(+192 files in other folders)
