[package]
name = "rust-client"
version = "0.1.0"
authors = ["Sakarias Johansson <sakarias.johansson@goodbyekansas.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext = { version = "0.1.0", registry = "nix" }
base = { version = "0.1.0", registry = "nix" }
