[package]
name = "rust-client"
version = "1.0.0"
authors = ["Sakarias Johansson <sakarias.johansson@goodbyekansas.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext = { version = "1.0.0", registry = "nix" }
base = { version = "1.0.0", registry = "nix" }
